--- a/sass/_sides.scss
+++ b/sass/_sides.scss
@@ -7,6 +7,14 @@
     z-index: 9;
     color: $light-slate;
     overflow: hidden;
+    // display: flex;
+    // align-items: center;
+    // overflow: hidden;
+    grid-column: 3 / 4;
+
+    @media only screen and (max-width: 600px) {
+        display: none;
+    }
 }
 
 .email {
@@ -16,6 +24,8 @@
     justify-content: center;
     position: relative;
     -webkit-box-align: center;
+    padding: 0;
+    margin: 0;
 
     & a {
         padding: 0.7rem;
@@ -54,6 +64,11 @@
     display: flex;
     align-items: center;
     overflow: hidden;
+    grid-column: 1 / 2;
+
+    @media only screen and (max-width: 600px) {
+        display: none;
+    }
 }
 
 .side__social {
